# unlocking-academia

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
admin/: bot.py  buttons.py  config.py  content.py  wsgi.py
admin/cli/: __init__.py  entrypoint.py
admin/form/: post.py  user.py
admin/templates/admin/: buttons.html  buttons_edit.html  content.html  content_edit.html
admin/view/: comment.py  home.py  post.py  user.py
backend/api/: app.py  config.py
backend/api/v1/: auth.py  comment.py  post.py  rating.py  request.py  user.py
backend/cli/: __init__.py  __main__.py  entrypoint.py
backend/db/: base.py  config.py  models.py  utils.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 547e23396df4_init_db.py  9fb8561238a9_rm_media.py  f01ad2f6ad2e_add_cascade_delete_for_posts.py
backend/repository/: comment.py  post.py  rating.py  request.py  user.py
backend/schema/: auth.py  base.py  comment.py  consultation.py  post.py  rating.py  request.py  user.py
backend/service/: auth.py  comment.py  post.py  rating.py  request.py  user.py
backend/utils/client/: smtp.py
backend/utils/client/auth/: jwt.py
backend/utils/config/: smtp.py
backend/utils/config/auth/: jwt.py
backend/utils/exception/auth/: jwt.py
common/: manager.py
common/redis/: client.py  config.py
tests/factory/: models.py  schema.py
tests/integration/backend/repo/: conftest.py  test_comment.py  test_post.py  test_rating.py  test_request.py  test_user.py
tests/unit/backend/api/: conftest.py
tests/unit/backend/api/v1/: test_auth.py  test_comment.py  test_post.py  test_rating.py  test_request.py  test_user.py
tests/unit/backend/service/: conftest.py  test_auth.py  test_comment.py  test_post.py  test_rating.py  test_request.py  test_user.py
tests/unit/backend/utils/: test_jwt.py  test_security.py
tgbot/: __main__.py  app.py  dialogs.py  keyboard.py  settings.py
tgbot/cli/: __init__.py  entrypoint.py
tgbot/handler/: callback.py  message.py
