[project]
name = "unlocking-academia"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitriy Zhukovskiy",email = "drzhukovskiy@edu.hse.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
