[project]
name = "unlocking-academia"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitriy Zhukovskiy",email = "drzhukovskiy@edu.hse.ru"}
]
readme = "README.md"

requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "setuptools (>=75.8.0,<76.0.0)",
    "typer (>=0.15.1,<0.16.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy[asyncio,postgresql-psycopgbinary] (>=2.0.37,<3.0.0)",
    "sqlalchemy-utils (>=0.41.2,<0.42.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "polyfactory (>=2.19.0,<3.0.0)",
    "flask-admin[images,s3,sqlalchemy-with-utils,translation] (>=1.6.1,<2.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
]

[project.scripts]
admin = 'admin.cli:app'
academia = 'backend.cli:app'

[tool.poetry]
packages = [
    { include = "./admin" },
    { include = "./backend" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
