[project]
name = "unlocking-academia"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitriy Zhukovskiy",email = "drzhukovskiy@edu.hse.ru"}
]
readme = "README.md"

requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "setuptools (>=75.8.0,<76.0.0)",
    "typer (>=0.15.1,<0.16.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy[asyncio,postgresql-psycopgbinary] (>=2.0.37,<3.0.0)",
    "sqlalchemy-utils (>=0.41.2,<0.42.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "polyfactory (>=2.19.0,<3.0.0)",
    "flask-admin[images,s3,sqlalchemy-with-utils,translation] (>=1.6.1,<2.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "bcrypt (==4.0.1)",
    "passlib (>=1.7.4,<2.0.0)",
    "aiogram (>=3.17.0,<4.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "aiosmtplib (>=4.0.0,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "pytest-env (>=1.1.5,<2.0.0)",
]

[project.scripts]
admin = 'admin.cli:app'
academia = 'backend.cli:app'
tgbot = 'tgbot.cli:app'

[tool.poetry]
packages = [
    { include = "./admin" },
    { include = "./backend" },
    { include = "./tgbot" },
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.0"
testcontainers = "^4.10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
branch = true
omit = [
    "**/__init__.py",
    "**/.venv/*",
    "backend/cli/*",
    "admin/cli/*",
    "tgbot/cli/*",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--strict-markers --showlocals --verbosity 2"
log_level = "DEBUG"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
env = [
    "DB_URL=postgresql+psycopg_async://test:test@localhost:50365/test",
]